--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,9 +1,10 @@
+
 <%= form_for @group do |f| %>
   <div class="form__field">
     <%= f.text_field :name, placeholder: 'Enter your full name' %>
   </div>
   <div class="form__field">
-    <%= f.text_field :icon, placeholder: 'Add icon URL (e.g. http://splash.io)' %>
+    <%= f.text_field :icon, placeholder: 'Add icon URL (e.g. http://splash.com/img/)' %>
   </div>
   <div class="form__field">
     <%= f.submit 'Create' %>
