--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,5 +1,5 @@
-<section>
-  <h1>Make Transaction</h1>
+<%= render 'common/navigation', :title => 'New Transaction' %>
+<section class="access flex">
   <%= render 'accounts/form' %>
   <%= link_to 'Back', group_accounts_path %>
 </section>
