--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,4 +1,4 @@
-<section>
-  <h1>Create a category</h1>
+<%= render 'common/navigation', :title => 'Categories' %>
+<section class="access flex">
   <%= render 'form' %>
 </section>
