--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -1,11 +1,13 @@
 <%= form_with(url: group_accounts_path, model: @account) do |f| %>
-  <div class="form__field">
-    <%= f.text_field :name, placeholder: 'Name of Transaction' %>
+  <div class="field">
+    <%= f.label :name %>
+    <%= f.text_field :name, placeholder: 'Name of Transaction', autofocus: true %>
+  </div>
+  <div class="field">
+    <%= f.label :amount %>
+    <%= f.number_field :amount, step: :any, autofocus: true, placeholder: 'Amount (Greater than 0)'%>
   </div>
   <div class="form__field">
-    <%= f.number_field :amount, step: :any %>
-  </div>
-  <div class="form__field">
-    <%= f.submit 'Save' %>
+    <%= f.submit 'Save', class: 'submit' %>
   </div>
 <% end %>
