--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,12 +1,14 @@
 
 <%= form_for @group do |f| %>
-  <div class="form__field">
+  <div class="field">
+    <%= f.label :name %>
     <%= f.text_field :name, placeholder: 'Enter your full name' %>
   </div>
-  <div class="form__field">
-    <%= f.text_field :icon, placeholder: 'Add icon URL (e.g. http://splash.com/img/)' %>
+  <div class="field">
+    <%= f.label :icon %>
+    <%= f.text_field :icon, placeholder: 'Add icon URL (e.g. http://splash.com/img.png)' %>
   </div>
-  <div class="form__field">
-    <%= f.submit 'Create' %>
+  <div class="actions mt-5">
+    <%= f.submit 'Save', class: 'submit' %>
   </div>
 <% end %>
